tests/paczka1/fuzzy1/72099941.err
Error in line 2: EpbrW S937 66,3
Error in line 10: S937 A248 63,5
Error in line 26: JWGpCH A248 8,6
